--- a/public/educator.html
+++ b/public/educator.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutor Registration Form</title>
-    <link rel="stylesheet" href="/css/educator.css">
+    <link rel="stylesheet" href="./educator.css">
     
    
-    <script defer src="/js/educator.js"></script>
+    <script defer src="./educator.js"></script>
 </head>
 <body>
     <h1>Teacher Registration Form</h1>
@@ -23,7 +23,7 @@
                 <label class="card-label" for="male">
                     <div class="card">
                         <div class="card-content">
-                            <img src=".././photos_2/male.jpg" alt="male" class="card-image">
+                            <img src="./photos_2/male.jpg" alt="male" class="card-image">
                             Male
                         </div>
                     </div>
@@ -32,7 +32,7 @@
                 <label class="card-label" for="female">
                     <div class="card">
                         <div class="card-content">
-                            <img src=".././photos_2/female.jpg" alt="female" class="card-image">
+                            <img src="./photos_2/female.jpg" alt="female" class="card-image">
                             Female
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                 <label class="card-label" for="other">
                     <div class="card">
                         <div class="card-content">
-                            <img src=".././../photos_2/other.png" alt="other" class="card-image">
+                            <img src="./photos_2/other.png" alt="other" class="card-image">
                             Other
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                 <label class="card-label" for="single">
                     <div class="card">
                         <div class="card-content">
-                            <img src=".././photos_2/man-standing.jpg" alt="single" class="card-image">
+                            <img src="./photos_2/man-standing.jpg" alt="single" class="card-image">
                             Single
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                 <label class="card-label" for="married">
                     <div class="card">
                         <div class="card-content">
-                            <img src=".././photos_2/married.jpg" alt="married" class="card-image">
+                            <img src="./photos_2/married.jpg" alt="married" class="card-image">
                             Married
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                 <label class="card-label" for="online">
                     <div class="card">
                         <div class="card-content">
-                            <img src=".././photos_2/online.jpg" alt="Online" class="card-image">
+                            <img src="./photos_2/online.jpg" alt="Online" class="card-image">
                             Online
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                 <label class="card-label" for="offline">
                     <div class="card">
                         <div class="card-content">
-                            <img src=".././photos_2/classroom.avif" alt="Bus" class="card-image">
+                            <img src="./photos_2/classroom.avif" alt="Bus" class="card-image">
                             Offline
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                 <label class="card-label" for="2-wheeler">
                     <div class="card">
                         <div class="card-content">
-                            <img src=".././photos_2/2-wheeler.webp" alt="2-Wheeler" class="card-image">
+                            <img src="./photos_2/2-wheeler.webp" alt="2-Wheeler" class="card-image">
                             2-Wheeler
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                 <label class="card-label" for="4-wheeler">
                     <div class="card">
                         <div class="card-content">
-                            <img src=".././photos_2/car.webp" alt="4-Wheeler" class="card-image">
+                            <img src="./photos_2/car.webp" alt="4-Wheeler" class="card-image">
                             4-Wheeler
                         </div>
                     </div>
@@ -197,7 +197,7 @@
                 <label class="card-label" for="metro">
                     <div class="card">
                         <div class="card-content">
-                            <img src=".././photos_2/metro_2.webp" alt="Metro" class="card-image">
+                            <img src="./photos_2/metro_2.webp" alt="Metro" class="card-image">
                             Metro
                         </div>
                     </div>
@@ -207,7 +207,7 @@
                 <label class="card-label" for="bus">
                     <div class="card">
                         <div class="card-content">
-                            <img src=".././photos_2/bus.webp" alt="Bus" class="card-image">
+                            <img src="./photos_2/bus.webp" alt="Bus" class="card-image">
                             Bus
                         </div>
                     </div>
