--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <!-- symbol cdn 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
-    <script defer src="/js/app.js"></script>
+    <script defer src="./app.js"></script>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
         <div class="navbar-container">
             <a href="#intro" class="navbar-logo">
                 <span class="logo-span">
-                    <img src="/photos_2/logo_wing_black-removebg-preview.png" alt="Logo" class="logo-img">
+                    <img src="../public/photos_2/logo_wing_black-removebg-preview.png" alt="Logo" class="logo-img">
                     <div>TITAN CLASSES</div> 
                 </span>
             </a>
@@ -45,7 +45,7 @@
                         <a href="#contact" class="navbar-link">Contact Us</a>
                     </li>
                     <li class="edu navbar-item">
-                        <a href="/educator" class="navbar-link educator">For Educator</a>
+                        <a href="./educator.html" class="navbar-link educator">For Educator</a>
                     </li>
                 </ul>
             </div>
@@ -55,7 +55,7 @@
         <a href="#home" class="sidebar-link">Home</a>
         <a href="#courses" class="sidebar-link">Courses</a>
         <a href="#contact" class="sidebar-link">Contact Us</a>
-        <a href="/educator" class="sidebar-link">For Educator</a>
+        <a href="educator.html" class="sidebar-link">For Educator</a>
         <a href="#" id="close-btn">&times;</a>
     </div>
 
@@ -63,7 +63,7 @@
 
 
         <div class="image-background">
-            <img src="/photos_2/sincerely-media-_-hjiem5TqI-unsplash.jpg" alt="Background Image">
+            <img src="../public/photos_2/sincerely-media-_-hjiem5TqI-unsplash.jpg" alt="Background Image">
             <div class="demo-wrapper">
                 <div class="demo-container">
                     <div class="demo-text" id="changingText"></div>
@@ -81,7 +81,7 @@
             <div class="card-container">
               <div class="card card-left">
                 <div class="card-content">
-                  <img src="/photos_2/classroom.avif" alt="Classroom Image">
+                  <img src="../public/photos_2/classroom.avif" alt="Classroom Image">
                   <div>
                     <h2>Home Tuitions</h2>
                     <p>Experience the convenience of personalized learning with our home tuition services. Our qualified tutors come to your doorstep, offering customized lessons tailored to meet individual learning needs. Enjoy one-on-one instruction in the comfort of your home, ensuring a focused and distraction-free learning environment.</p>
@@ -94,7 +94,7 @@
                         <h2>Online Tuitions</h2>
                         <p>Unlock limitless learning opportunities with our online tuition services. Connect with expert tutors from anywhere, using our interactive virtual classroom. Benefit from flexible scheduling and a variety of online resources, making learning accessible and engaging from the comfort of your own home.</p>
                     </div>
-                    <img src="/photos_2/classroom.avif" alt="Classroom Image">
+                    <img src="../public/photos_2/classroom.avif" alt="Classroom Image">
                 </div>
               </div>
             </div>
@@ -105,7 +105,7 @@
             <h2 class="section-heading">Our Top Faculty</h2>
             <div class="faculty-member">
                 <div class="faculty-image">
-                    <img src="/photos_2/user1.avif" alt="Faculty 1">
+                    <img src="../public/photos_2/user1.avif" alt="Faculty 1">
                 </div>
                 <div class="faculty-info">
                     <h3>Faculty Name</h3>
@@ -116,7 +116,7 @@
             <div class="faculty-member">
                 
                 <div class="faculty-image">
-                    <img src="/photos_2/user2.avif" alt="Faculty 1">
+                    <img src="../public/photos_2/user2.avif" alt="Faculty 1">
                 </div>
                 <div class="faculty-info">
                     <h3>Faculty Name</h3>
@@ -126,7 +126,7 @@
             </div>
             <div class="faculty-member">
                 <div class="faculty-image">
-                    <img src="/photos_2/user3.avif" alt="Faculty 1">
+                    <img src="../public/photos_2/user3.avif" alt="Faculty 1">
                 </div>
                 <div class="faculty-info">
                     <h3>Faculty Name</h3>
@@ -140,7 +140,7 @@
             <h2 class="section-heading">What Our Students Say</h2>
             <div class="faculty-member">
                 <div class="faculty-image">
-                    <img src="/photos_2/user1.avif" alt="Faculty 1">
+                    <img src="../public/photos_2/user1.avif" alt="Faculty 1">
                 </div>
                 <div class="faculty-info">
                     <h3>Faculty Name</h3>
@@ -151,7 +151,7 @@
             <div class="faculty-member">
                 
                 <div class="faculty-image">
-                    <img src="/photos_2/user2.avif" alt="Faculty 1">
+                    <img src="../public/photos_2/user2.avif" alt="Faculty 1">
                 </div>
                 <div class="faculty-info">
                     <h3>Faculty Name</h3>
@@ -161,7 +161,7 @@
             </div>
             <div class="faculty-member">
                 <div class="faculty-image">
-                    <img src="/photos_2/user3.avif" alt="Faculty 1">
+                    <img src="../public/photos_2/user3.avif" alt="Faculty 1">
                 </div>
                 <div class="faculty-info">
                     <h3>Faculty Name</h3>
