--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     
     <!-- customized css -->
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- symbol cdn 
 
